[package]
name = "simple_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "2.1.0"
log = "0.4.8"
percent-encoding = "2.1.0"
hyper-tls = "0.5.0"
openssl = "0.10.38"
openssl-sys = "0.9.72"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }